<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:orientation="vertical"

                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/data_corona_indonesia"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:fontFamily="@font/google_font_normal"
                    android:textSize="25sp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/google_font_normal"
                    android:text="@string/terkonfirmasi"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_font_normal"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/data_loading_placeholder"
                    android:textSize="20sp"
                    android:id="@+id/indonesia_confirmed_number">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="3dp"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            app:tint="@color/red"
                            android:src="@drawable/ic_baseline_emoji_people_24">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/google_font_normal"
                            android:text="@string/meninggal"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/google_font_normal"
                            android:text="@string/data_loading_placeholder"
                            android:id="@+id/indonesia_death_number">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="10dp"
                        android:layout_margin="3dp"
                        android:fontFamily="@font/google_font_normal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            app:tint="@color/yellow"
                            android:src="@drawable/ic_baseline_emoji_people_24">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/google_font_normal"
                            android:text="@string/dirawat"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/google_font_normal"
                            android:text="@string/data_loading_placeholder"
                            android:id="@+id/indonesia_sick_number">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="3dp"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            app:tint="@color/green"
                            android:src="@drawable/ic_baseline_emoji_people_24">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/google_font_normal"
                            android:text="@string/sembuh"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/google_font_normal"
                            android:text="@string/data_loading_placeholder"
                            android:id="@+id/indonesia_recovered_number">

                        </TextView>

                    </LinearLayout>


                    <!--                    <it.gmariotti.cardslib.library.view.CardViewNative-->
                    <!--                        android:id="@+id/carddemo4"-->
                    <!--                        android:layout_width="100dp"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:layout_marginLeft="12dp"-->
                    <!--                        android:layout_marginRight="12dp"-->
                    <!--                        android:layout_marginTop="12dp"-->
                    <!--                        />-->

                    <!--                    <it.gmariotti.cardslib.library.view.CardViewNative-->
                    <!--                        android:id="@+id/carddemo5"-->
                    <!--                        android:layout_width="100dp"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:layout_marginLeft="12dp"-->
                    <!--                        android:layout_marginRight="12dp"-->
                    <!--                        android:layout_marginTop="12dp"-->
                    <!--                        />-->

                    <!--                    <it.gmariotti.cardslib.library.view.CardViewNative-->
                    <!--                        android:id="@+id/carddemo6"-->
                    <!--                        android:layout_width="100dp"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:layout_marginLeft="12dp"-->
                    <!--                        android:layout_marginRight="12dp"-->
                    <!--                        android:layout_marginTop="12dp"-->
                    <!--                        />-->

                </LinearLayout>



            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/grafik"
                android:textStyle="bold"
                android:padding="10dp"
                android:fontFamily="@font/google_font_normal"
                android:textSize="25sp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/details_chart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    />

                <!--            <ImageView-->
                <!--                android:id="@+id/graph1"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="220dp"-->
                <!--                android:src="@drawable/banner">-->

                <!--            </ImageView>-->

                <!--            <ImageView-->
                <!--                android:id="@+id/graph2"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="220dp"-->
                <!--                android:src="@drawable/banner">-->

                <!--            </ImageView>-->

                <!--            <ImageView-->
                <!--                android:id="@+id/graph3"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="220dp"-->
                <!--                android:src="@drawable/banner">-->

                <!--            </ImageView>-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout >