<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/sign_up_title"
                android:textStyle="bold"
                android:fontFamily="@font/google_font_normal"
                android:paddingTop="65dp"
                android:paddingBottom="65dp"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/username"
                    android:fontFamily="@font/google_font_normal"
                    android:textSize="20sp">

                </TextView>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/google_font_normal"
                    android:layout_height="wrap_content">

                </EditText>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1">

                </View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="@font/google_font_normal"
                    android:text="@string/password"
                    android:textSize="20sp">

                </TextView>

                <EditText
                    android:id="@+id/password"
                    android:fontFamily="@font/google_font_normal"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </EditText>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1">

                </View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="@font/google_font_normal"
                    android:text="Retype Password"
                    android:textSize="20sp">

                </TextView>

                <EditText
                    android:id="@+id/retype_password"
                    android:fontFamily="@font/google_font_normal"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </EditText>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                </View>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/google_font_normal"
                    android:textSize="18sp"
                    android:padding="15dp"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:backgroundTint="@color/blue"
                    android:text="SIGN UP"
                    android:id="@+id/signup_confirm"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>





